# library-data-airflow

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dags/: automate_archival_description.py
