[tool.poetry]
name = "library-data-airflow"
version = "0.1.0"
description = ""
authors = ["jacobthill <jtim@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = {extras = ["amazon"], version = "^2.4.0"}
lxml = "^4.6.3"
archivessnake = "^0.9.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
flake8 = "^5.0.4"
black = "^22.8.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.9.0"
types-PyYAML = "^6.0.12"
types-requests = "^2.28.11"
jsonschema = "^4.16.0"
requests-mock = "^1.10.0"
mock = "^4.0.3"
types-mock = "^4.0.15"
yamllint = "^1.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
